[Fix] Remove inputs extra margin added by WordPress styles.

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -39,6 +39,7 @@
 		width: 100%;
 		height: $form--input-height-base;
 		padding: 7px 15px;
+		margin: 0;
 		font-size: $font--size;
 		font-weight: $form--input-font-weight;
 		line-height: $form--input-line-height;
